# Super-Goose

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .goosehints  404.html  AGENTS.md  ALL_STEPS_COMPLETE.md  AUDIO_VISUALIZER_SPEC.md  AUTOMATION_COMPLETE.md  BUG_FIXES_COMPLETED.md  BUILD_COMPLETE_FINAL_REPORT.md  BUILD_LOCAL.md  CHANGELOG.md  CI_CD_REDESIGN_COMPLETE.md  CLIPPY_ANALYSIS_RESULTS.md  COMPLETE_AUDIT_AND_FIX_PLAN.md  COMPLETE_FIX_AND_TEST_REPORT.md  COMPLETE_SESSION_ACHIEVEMENTS.md  COMPREHENSIVE_FIX_SUMMARY.md  CONSCIOUS_PROJECT_SUMMARY.md  CONTRIBUTING_SUPER_GOOSE.md  CRITICAL_TEST_FAILURES_REPORT.md  CURRENT_STATE_REPORT.md  CURRENT_STATUS.md  Cargo.toml  CUsersAdmin.claude-worktreesgoosepensive-heisenbergtemp_smoke_log.txt  CUsersAdmin.claude-worktreesgoosepensive-heisenbergtemp_windows_cli_log.txt  CUsersAdmin.claude-worktreesgoosepensive-heisenbergtemp_windows_desktop_log.txt  DEVELOPMENT_STANDARDS.md  DOCUMENTATION_GAP_ANALYSIS.md  Dockerfile  END_TO_END_AUDIT_REPORT.md  ENTERPRISE_QUALITY_MASTER_PLAN.md  EXECUTION_COMPLETE_SUMMARY.md  FEATURES.md  FINAL_SESSION_SUMMARY.md  GITHUB_EMERGENCY_ACTION_PLAN.md  GITHUB_WORKFLOW_FAILURES_ANALYSIS.md  GITLAB_GITKRAKEN_SETUP.md  (+68 more)
.github/: CODEOWNERS  SECRETS.md  dependabot.yml
.husky/: pre-commit  pre-push
.semgrep/: stage6.yml
audits/: SUPER-GOOSE-DEEP-AUDIT.md  audit-01-components.md  audit-02-hooks-state.md  (+12 more)
crates/goose-conductor/: Cargo.toml
crates/goose-conductor/src/: child_manager.rs  config.rs  health_checker.rs  ipc_server.rs  log_manager.rs  main.rs  message_bus.rs  state_store.rs
(+2744 files in other folders)
